--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/_201_Bitwise_AND_of_Numbers_Range.java=UTF-8
 encoding//src/_209_Minimum_Size_Subarray_Sum.java=UTF-8
+encoding//src/_229_Majority_Element_II.java=UTF-8
+encoding//src/_230_Kth_Smallest_Element_in_a_BST.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
