--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,17 @@
 eclipse.preferences.version=1
 encoding//src/_201_Bitwise_AND_of_Numbers_Range.java=UTF-8
 encoding//src/_209_Minimum_Size_Subarray_Sum.java=UTF-8
+encoding//src/_215_Kth_Largest_Element_in_an_Array.java=UTF-8
+encoding//src/_223_Rectangle_Area.java=UTF-8
+encoding//src/_227_Basic_Calculator_II.java=UTF-8
 encoding//src/_229_Majority_Element_II.java=UTF-8
 encoding//src/_230_Kth_Smallest_Element_in_a_BST.java=UTF-8
+encoding//src/_240_Search_a_2D_Matrix_II.java=UTF-8
+encoding//src/_241_Different_Ways_to_Add_Parentheses.java=UTF-8
+encoding//src/_260_Single_Number_III.java=UTF-8
+encoding//src/_263_Ugly_Number.java=UTF-8
+encoding//src/_264_Ugly_Number_II.java=UTF-8
+encoding//src/_268_Missing_Number.java=UTF-8
+encoding//src/_274_H_Index.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
