--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,5 +13,8 @@ encoding//src/_263_Ugly_Number.java=UTF-8
 encoding//src/_264_Ugly_Number_II.java=UTF-8
 encoding//src/_268_Missing_Number.java=UTF-8
 encoding//src/_274_H_Index.java=UTF-8
+encoding//src/_275_H_Index_II.java=UTF-8
+encoding//src/_284_Peeking_Iterator.java=UTF-8
+encoding//src/_287_Find_the_Duplicate_Number.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
