--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -18,3 +18,4 @@ encoding//src/_284_Peeking_Iterator.java=UTF-8
 encoding//src/_287_Find_the_Duplicate_Number.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
+encoding//src/_520_Detect_Capital.java=UTF-8
