--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -16,6 +16,13 @@ encoding//src/_274_H_Index.java=UTF-8
 encoding//src/_275_H_Index_II.java=UTF-8
 encoding//src/_284_Peeking_Iterator.java=UTF-8
 encoding//src/_287_Find_the_Duplicate_Number.java=UTF-8
+encoding//src/_289_Game_of_Life.java=UTF-8
+encoding//src/_300_Longest_Increasing_Subsequence.java=UTF-8
+encoding//src/_304_Range_Sum_Query_2D_Immutable.java=UTF-8
+encoding//src/_307_Range_Sum_Query_Mutable.java=UTF-8
+encoding//src/_341_Flatten_Nested_List_Iterator.java=UTF-8
+encoding//src/_347_Top_K_Frequent_Elements.java=UTF-8
+encoding//src/_373_Find_K_Pairs_with_Smallest_Sums.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
 encoding//src/_520_Detect_Capital.java=UTF-8
