--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -23,6 +23,12 @@ encoding//src/_307_Range_Sum_Query_Mutable.java=UTF-8
 encoding//src/_341_Flatten_Nested_List_Iterator.java=UTF-8
 encoding//src/_347_Top_K_Frequent_Elements.java=UTF-8
 encoding//src/_373_Find_K_Pairs_with_Smallest_Sums.java=UTF-8
+encoding//src/_375_Guess_Number_Higher_or_Lower_II.java=UTF-8
+encoding//src/_378_Kth_Smallest_Element_in_a_Sorted_Matrix.java=UTF-8
+encoding//src/_380_Insert_Delete_GetRandom_O1.java=UTF-8
+encoding//src/_382_Linked_List_Random_Node.java=UTF-8
+encoding//src/_384_Shuffle_an_Array.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
 encoding//src/_520_Detect_Capital.java=UTF-8
+encoding//src/_524_Longest_Word_in_Dictionary_through_Deleting.java=UTF-8
