--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Test/Test.java=UTF-8
 encoding//src/_201_Bitwise_AND_of_Numbers_Range.java=UTF-8
 encoding//src/_209_Minimum_Size_Subarray_Sum.java=UTF-8
 encoding//src/_215_Kth_Largest_Element_in_an_Array.java=UTF-8
@@ -20,6 +21,7 @@ encoding//src/_289_Game_of_Life.java=UTF-8
 encoding//src/_300_Longest_Increasing_Subsequence.java=UTF-8
 encoding//src/_304_Range_Sum_Query_2D_Immutable.java=UTF-8
 encoding//src/_307_Range_Sum_Query_Mutable.java=UTF-8
+encoding//src/_312_Burst_Balloons.java=UTF-8
 encoding//src/_341_Flatten_Nested_List_Iterator.java=UTF-8
 encoding//src/_347_Top_K_Frequent_Elements.java=UTF-8
 encoding//src/_373_Find_K_Pairs_with_Smallest_Sums.java=UTF-8
@@ -30,5 +32,7 @@ encoding//src/_382_Linked_List_Random_Node.java=UTF-8
 encoding//src/_384_Shuffle_an_Array.java=UTF-8
 encoding//src/_448_Find_All_Numbers_Disappeared_in_an_Array.java=UTF-8
 encoding//src/_461_Hamming_Distance.java=UTF-8
+encoding//src/_517_Super_Washing_Machines.java=UTF-8
 encoding//src/_520_Detect_Capital.java=UTF-8
 encoding//src/_524_Longest_Word_in_Dictionary_through_Deleting.java=UTF-8
+encoding//src/_675_Cut_Off_Trees_for_Golf_Event.java=UTF-8
