--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//src/AmazonOA/Fruit_CheckWinner.java=UTF-8
 encoding//src/AmazonOA/GolfEvent.java=UTF-8
 encoding//src/AmazonOA/ItemAssociation.java=UTF-8
 encoding//src/AmazonOA/Movie.java=UTF-8
+encoding//src/AmazonOA/MovieNetwork.java=UTF-8
 encoding//src/AmazonOA/Truck.java=UTF-8
 encoding//src/Test/Test.java=UTF-8
 encoding//src/_201_Bitwise_AND_of_Numbers_Range.java=UTF-8
