--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,7 +13,34 @@ encoding//src/AmazonOA/ItemAssociation.java=UTF-8
 encoding//src/AmazonOA/Maze.java=UTF-8
 encoding//src/AmazonOA/Movie.java=UTF-8
 encoding//src/AmazonOA/MovieNetwork.java=UTF-8
+encoding//src/AmazonOA/Solution.java=UTF-8
 encoding//src/AmazonOA/Truck.java=UTF-8
+encoding//src/Facebook/CompressString.java=UTF-8
+encoding//src/Facebook/MutualFriends.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_design_game_ranking.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_design_instegram.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_design_news_feed.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_design_newsfeed.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_design_online_shoping.java=UTF-8
+encoding//src/Facebook/SystemDesign/_01_twitter_search.java=UTF-8
+encoding//src/Facebook/SystemDesign/_02_desgin_order_system.java=UTF-8
+encoding//src/Facebook/SystemDesign/_02_design_graph_share.java=UTF-8
+encoding//src/Facebook/SystemDesign/_02_design_poi.java=UTF-8
+encoding//src/Facebook/SystemDesign/_02_design_ticket_order_system.java=UTF-8
+encoding//src/Facebook/SystemDesign/_02_design_typehead.java=UTF-8
+encoding//src/Facebook/SystemDesign/_04_design_memcache.java=UTF-8
+encoding//src/Facebook/SystemDesign/_design_privacy_setting.java=UTF-8
+encoding//src/Facebook/SystemDesign/_design_search_engin.java=UTF-8
+encoding//src/Facebook/SystemDesign/design_online_music_service.java=UTF-8
+encoding//src/Facebook/SystemDesign/design_process_url.java=UTF-8
+encoding//src/Facebook/_00_leetcode.java=UTF-8
+encoding//src/Facebook/_01_closest_point.java=UTF-8
+encoding//src/Facebook/_01_double_sum.java=UTF-8
+encoding//src/Facebook/_01_is_balanced_tree.java=UTF-8
+encoding//src/Facebook/_01_leetcode_find_all_anagrams_in_a_string.java=UTF-8
+encoding//src/Facebook/_01_leetcode_validate_bst.java=UTF-8
+encoding//src/Facebook/_01_sorted_array_except_two.java=UTF-8
+encoding//src/Facebook/_01_sparce_matrix.java=UTF-8
 encoding//src/OA/MovieNetwork.java=UTF-8
 encoding//src/Test/Test.java=UTF-8
 encoding//src/_201_Bitwise_AND_of_Numbers_Range.java=UTF-8
